--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gulp-pug": "~3.3.0",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
@@ -22,7 +23,7 @@
     "merge-stream": "^1.0.1"
   },
   "dependencies": {
-    "normalize.css": "~7.0.0",
-    "jquery": "~3.2.1"
+    "jquery": "~3.2.1",
+    "normalize.css": "~7.0.0"
   }
 }
