--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
     "gulp.spritesmith": "^6.5.0",
-    "merge-stream": "^1.0.1"
+    "merge-stream": "^1.0.1",
+    "webpack": "^3.1.0",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "jquery": "~3.2.1",
