--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "gulp-load-plugins": "^1.2.0",
         "gulp-nodemon": "^2.2.1",
         "gulp-notify": "^3.0.0",
+        "gulp-pug": "^3.3.0",
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.5.4",
         "gulp-replace-task": "^0.11.0",
