--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
-./node_modules/
-./build/
-./public/
-./idea/
+# Numerous always-ignore extensions
+*.bak
+*.diff
+*.err
+*.exe
+*.log
+*.orig
+*.rej
+*.sass-cache
+*.swo
+*.swp
+*.vi
+*~
+
+# OS or Editor folders
+*.sublime-grunt.cache
+*.sublime-project
+*.sublime-workspace
+._*
+.cache
+.DS_Store
+.project
+.settings
+.tmproj
+Thumbs.db
+
+# Folders to ignore
+.CVS
+.git
+.hg
+.idea
+.svn
+bower_components
+dist
+build
+public
+
+# Node.JS
+node_modules
+npm-debug.log
