настройки для VDS

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Berezin Portfolio",
+    "name": "my_portfolio",
     "version": "0.0.2",
     "author": "Arseniy",
     "license": "ISC",
